spacing for letter_pagination, fixes #2167

--- a/app/stylesheets/ui_base/_base.sass
+++ b/app/stylesheets/ui_base/_base.sass
@@ -679,7 +679,9 @@ nav#nav-full
   display: inline
   a
     +blue-link
-
+.letter_pagination
+  text-align: center
+  margin-bottom: 10px
 nav#tabs
   +clearfix
   display: block
